--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,33 +13,35 @@ body {
 		margin-right: auto;
 
 		#categories {
-			height: 100px;
+			height: 60px;
 			width: 100%;
 			margin-top: 20px;
 			margin-bottom: 20px;
 
 			li {
 				width: 112px;
-				border-radius: 8px;
+				border-radius: 5px;
 				box-shadow: 3px 3px 2px #333333;
-				height: 30px;
+				height: 40px;
 				list-style-type: none;
 				float: left;
-				margin-left: 10px;
+				margin-left: 7px;
 				display: inline-block;
-				background-color: #0096db;
+				background-color: #333333;
 			}
 
 			a {
-				width: 110px;
+				width: 115px;
 				text-align: center;
-				margin-top: 5px;
+				margin-top: 12px;
 				text-shadow: 2px 2px #000000;	
 				display: block;
 				text-decoration: none;
 				color: white;
+				font-size: 11pt;
 				text-transform: uppercase;
 				font-weight: bold;
+				font-family: helvetica;
 			}
 		}
 
@@ -174,7 +176,7 @@ body {
 					width: 286px;
 					margin-left: 38px;
 				}
-		}
+			}
 
 		#single-box{
 			border: solid 1px black;
@@ -185,7 +187,7 @@ body {
 			z-index: 100;
 
 			height: 500px;
-			margin-top: -250px;
+			margin-top: -220px;
 
 			width: 800px;
 			margin-left: -400px;
@@ -198,10 +200,39 @@ body {
 				position: relative;
 				width: 300px;
 				margin-left: 100px;
-
-				.fa-check {
-					display: none;
-					color: green;
+				.purchase_success {
+					height: 40px;
+					width: 40px;
+					.fa-check {
+						display: none;
+						color: green;
+					}
+				}
+				#btn-submit {
+					-moz-box-shadow:inset 0px -3px 7px 0px #29bbff;
+					-webkit-box-shadow:inset 0px -3px 7px 0px #29bbff;
+					box-shadow:inset 0px -3px 7px 0px #29bbff;
+					background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #9bd4f5), color-stop(1, #0688fa));
+					background:-moz-linear-gradient(top, #9bd4f5 5%, #0688fa 100%);
+					background:-webkit-linear-gradient(top, #9bd4f5 5%, #0688fa 100%);
+					background:-o-linear-gradient(top, #9bd4f5 5%, #0688fa 100%);
+					background:-ms-linear-gradient(top, #9bd4f5 5%, #0688fa 100%);
+					background:linear-gradient(to bottom, #9bd4f5 5%, #0688fa 100%);
+					filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#9bd4f5', endColorstr='#0688fa',GradientType=0);
+					background-color:#9bd4f5;
+					-moz-border-radius:13px;
+					-webkit-border-radius:13px;
+					border-radius:13px;
+					border:1px solid #0b0e07;
+					display:inline-block;
+					cursor:pointer;
+					color:#ffffff;
+					font-family:Arial;
+					font-size:15px;
+					margin-top: 10px;
+					padding:9px 23px;
+					text-decoration:none;
+					text-shadow:0px 1px 0px #263666;
 				}
 			}
 		}	
