--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,7 +31,8 @@ body {
 			}
 
 			a {
-				width: 115px;
+				width: 112px;
+				height: 28px;
 				text-align: center;
 				margin-top: 12px;
 				text-shadow: 2px 2px #000000;	
@@ -125,6 +126,10 @@ body {
 						outline: none;
 						border-top: 5px solid #D40000;
 					}
+					a {
+						text-decoration: none;
+						color: red;
+					}
 				}
 			}
 		}
@@ -191,6 +196,10 @@ body {
 
 			width: 800px;
 			margin-left: -400px;
+
+			h1, p, label {
+				font-family: helvetica;
+			}
 			.product_image {
 				float: left;
 				position: relative;
@@ -230,9 +239,14 @@ body {
 					font-family:Arial;
 					font-size:15px;
 					margin-top: 10px;
+					outline: none;
 					padding:9px 23px;
 					text-decoration:none;
 					text-shadow:0px 1px 0px #263666;
+
+					.fa-shopping-cart {
+						margin-left: 5px;
+					}
 				}
 			}
 		}	
