--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ body #wrapper #categories li {
 }
 /* line 33, scss/style.scss */
 body #wrapper #categories a {
-  width: 115px;
+  width: 112px;
+  height: 28px;
   text-align: center;
   margin-top: 12px;
   text-shadow: 2px 2px #000000;
@@ -46,7 +47,7 @@ body #wrapper #categories a {
   font-weight: bold;
   font-family: helvetica;
 }
-/* line 48, scss/style.scss */
+/* line 49, scss/style.scss */
 body #wrapper #header {
   width: 100%;
   height: 55px;
@@ -56,7 +57,7 @@ body #wrapper #header {
   left: 0;
   z-index: 75;
 }
-/* line 57, scss/style.scss */
+/* line 58, scss/style.scss */
 body #wrapper #header #Header-logo {
   width: 40px;
   height: 50px;
@@ -64,7 +65,7 @@ body #wrapper #header #Header-logo {
   position: absolute;
   margin-left: 48.5%;
 }
-/* line 64, scss/style.scss */
+/* line 65, scss/style.scss */
 body #wrapper #header #shoppingcart-img {
   width: 50px;
   height: 50px;
@@ -74,7 +75,7 @@ body #wrapper #header #shoppingcart-img {
   margin-top: 2.5px;
   margin-right: 5px;
 }
-/* line 74, scss/style.scss */
+/* line 75, scss/style.scss */
 body #wrapper #item-holder {
   background-color: white;
   width: 300px;
@@ -88,28 +89,28 @@ body #wrapper #item-holder {
   display: none;
   position: fixed;
 }
-/* line 86, scss/style.scss */
+/* line 87, scss/style.scss */
 body #wrapper #item-holder .added-item {
   margin: 3px;
   border: 1px solid #C2C2C2;
   height: 100px;
   box-shadow: 3px 3px 3px #C2C2C2;
 }
-/* line 91, scss/style.scss */
+/* line 92, scss/style.scss */
 body #wrapper #item-holder .added-item .item-info {
   float: left;
 }
-/* line 95, scss/style.scss */
+/* line 96, scss/style.scss */
 body #wrapper #item-holder .added-item .item-info ul li {
   list-style-type: none;
   font-family: helvetica;
 }
-/* line 101, scss/style.scss */
+/* line 102, scss/style.scss */
 body #wrapper #item-holder .added-item .remove-button {
   width: 188px;
   margin-left: 88px;
 }
-/* line 104, scss/style.scss */
+/* line 105, scss/style.scss */
 body #wrapper #item-holder .added-item .remove-button button {
   margin-top: 25px;
   float: right;
@@ -122,7 +123,7 @@ body #wrapper #item-holder .added-item .remove-button button {
   outline: none;
   border-bottom: 5px solid #D40000;
 }
-/* line 116, scss/style.scss */
+/* line 117, scss/style.scss */
 body #wrapper #item-holder .added-item .remove-button button:active {
   margin-top: 25px;
   float: right;
@@ -135,7 +136,12 @@ body #wrapper #item-holder .added-item .remove-button button:active {
   outline: none;
   border-top: 5px solid #D40000;
 }
-/* line 132, scss/style.scss */
+/* line 129, scss/style.scss */
+body #wrapper #item-holder .added-item .remove-button a {
+  text-decoration: none;
+  color: red;
+}
+/* line 137, scss/style.scss */
 body #wrapper #overlay {
   display: none;
   background-color: rgba(0, 0, 0, 0.8);
@@ -148,7 +154,7 @@ body #wrapper #overlay {
   width: 2400px;
   margin-left: -1200px;
 }
-/* line 146, scss/style.scss */
+/* line 151, scss/style.scss */
 body #wrapper #product-wrapper {
   width: 400px;
   height: 500px;
@@ -159,7 +165,7 @@ body #wrapper #product-wrapper {
   box-shadow: 3px 3px 3px #C2C2C2;
   border: 1px solid #C2C2C2;
 }
-/* line 155, scss/style.scss */
+/* line 160, scss/style.scss */
 body #wrapper #product-wrapper #index-title {
   margin-left: 10px;
   margin-left: 10px;
@@ -169,7 +175,7 @@ body #wrapper #product-wrapper #index-title {
   color: black;
   font-size: 25px;
 }
-/* line 164, scss/style.scss */
+/* line 169, scss/style.scss */
 body #wrapper #product-wrapper #index-price {
   margin-left: 10px;
   margin-right: 10px;
@@ -179,14 +185,14 @@ body #wrapper #product-wrapper #index-price {
   color: black;
   border-bottom: 1px solid black;
 }
-/* line 173, scss/style.scss */
+/* line 178, scss/style.scss */
 body #wrapper #product-wrapper img {
   margin-top: 32px;
   height: 360px;
   width: 286px;
   margin-left: 38px;
 }
-/* line 181, scss/style.scss */
+/* line 186, scss/style.scss */
 body #wrapper #single-box {
   border: solid 1px black;
   position: fixed;
@@ -199,29 +205,33 @@ body #wrapper #single-box {
   width: 800px;
   margin-left: -400px;
 }
-/* line 194, scss/style.scss */
+/* line 200, scss/style.scss */
+body #wrapper #single-box h1, body #wrapper #single-box p, body #wrapper #single-box label {
+  font-family: helvetica;
+}
+/* line 203, scss/style.scss */
 body #wrapper #single-box .product_image {
   float: left;
   position: relative;
 }
-/* line 198, scss/style.scss */
+/* line 207, scss/style.scss */
 body #wrapper #single-box .product_info {
   float: left;
   position: relative;
   width: 300px;
   margin-left: 100px;
 }
-/* line 203, scss/style.scss */
+/* line 212, scss/style.scss */
 body #wrapper #single-box .product_info .purchase_success {
   height: 40px;
   width: 40px;
 }
-/* line 206, scss/style.scss */
+/* line 215, scss/style.scss */
 body #wrapper #single-box .product_info .purchase_success .fa-check {
   display: none;
   color: green;
 }
-/* line 211, scss/style.scss */
+/* line 220, scss/style.scss */
 body #wrapper #single-box .product_info #btn-submit {
   -moz-box-shadow: inset 0px -3px 7px 0px #29bbff;
   -webkit-box-shadow: inset 0px -3px 7px 0px #29bbff;
@@ -244,11 +254,16 @@ body #wrapper #single-box .product_info #btn-submit {
   font-family: Arial;
   font-size: 15px;
   margin-top: 10px;
+  outline: none;
   padding: 9px 23px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #263666;
 }
-/* line 239, scss/style.scss */
+/* line 247, scss/style.scss */
+body #wrapper #single-box .product_info #btn-submit .fa-shopping-cart {
+  margin-left: 5px;
+}
+/* line 253, scss/style.scss */
 body #wrapper #inner {
   width: 100%;
   height: 400px;
@@ -258,7 +273,7 @@ body #wrapper #inner {
   left: 0;
   margin: -100px 0 0 0;
 }
-/* line 248, scss/style.scss */
+/* line 262, scss/style.scss */
 body #wrapper #carousel img {
   height: auto;
   border: none;
@@ -266,7 +281,7 @@ body #wrapper #carousel img {
   float: left;
   padding: 0 10px;
 }
-/* line 256, scss/style.scss */
+/* line 270, scss/style.scss */
 body #wrapper .loading {
   height: 200px;
   width: 200px;
@@ -274,43 +289,43 @@ body #wrapper .loading {
   background-repeat: none;
   margin: 0 auto;
 }
-/* line 263, scss/style.scss */
+/* line 277, scss/style.scss */
 body #wrapper .loading_text {
   width: 200px;
   height: 40px;
   margin: 0 auto;
   text-align: center;
 }
-/* line 269, scss/style.scss */
+/* line 283, scss/style.scss */
 body #wrapper #checkout-list {
   background-color: rgba(255, 255, 255, 0.7);
   min-height: 400px;
 }
-/* line 272, scss/style.scss */
+/* line 286, scss/style.scss */
 body #wrapper #checkout-list .checkout-table {
   margin: 10px;
   width: 98%;
   text-align: left;
   border-collapse: collapse;
 }
-/* line 278, scss/style.scss */
+/* line 292, scss/style.scss */
 body #wrapper #checkout-list .checkout-table .table-head th {
   padding-bottom: 30px;
   font-family: helvetica;
   font-size: 30px;
 }
-/* line 284, scss/style.scss */
+/* line 298, scss/style.scss */
 body #wrapper #checkout-list .checkout-table .table-body {
   border-bottom: 1px solid black;
   margin-bottom: 20px;
 }
-/* line 287, scss/style.scss */
+/* line 301, scss/style.scss */
 body #wrapper #checkout-list .checkout-table .table-body td {
   font-family: helvetica;
   font-size: 20px;
   padding-top: 20px;
 }
-/* line 293, scss/style.scss */
+/* line 307, scss/style.scss */
 body #wrapper #checkout-list .checkout-table .table-body #table-button button {
   margin-top: 25px;
   height: 45px;
@@ -324,7 +339,7 @@ body #wrapper #checkout-list .checkout-table .table-body #table-button button {
   border-bottom: 5px solid #D40000;
   border-left: 2px solid #D40000;
 }
-/* line 307, scss/style.scss */
+/* line 321, scss/style.scss */
 body #wrapper #checkout-list .checkout-table .table-body #table-button button:active {
   margin-top: 25px;
   height: 45px;
@@ -338,26 +353,26 @@ body #wrapper #checkout-list .checkout-table .table-body #table-button button:ac
   border-top: 4px solid #D40000;
   border-right: 2px solid #D40000;
 }
-/* line 329, scss/style.scss */
+/* line 343, scss/style.scss */
 body #wrapper #receipt_option #receipt-header {
   text-align: center;
   font-family: helvetica;
   font-size: 50px;
 }
-/* line 334, scss/style.scss */
+/* line 348, scss/style.scss */
 body #wrapper #receipt_option #receipt-text {
   text-align: center;
   font-family: helvetica;
   font-size: 30px;
 }
-/* line 340, scss/style.scss */
+/* line 354, scss/style.scss */
 body #wrapper #receipt_option #btn-option {
   margin-right: auto;
   margin-left: auto;
   height: 110px;
   width: 45%;
 }
-/* line 345, scss/style.scss */
+/* line 359, scss/style.scss */
 body #wrapper #receipt_option #btn-option button {
   margin-top: 25px;
   margin-left: 20px;
@@ -374,7 +389,7 @@ body #wrapper #receipt_option #btn-option button {
   border-bottom: 5px solid #D40000;
   border-left: 3px solid #D40000;
 }
-/* line 362, scss/style.scss */
+/* line 376, scss/style.scss */
 body #wrapper #receipt_option #btn-option button:active {
   margin-top: 25px;
   height: 100px;
@@ -390,7 +405,7 @@ body #wrapper #receipt_option #btn-option button:active {
   border-top: 5px solid #D40000;
   border-right: 3px solid #D40000;
 }
-/* line 382, scss/style.scss */
+/* line 396, scss/style.scss */
 body #page-not-found img {
   width: 100px;
   height: auto;
