--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* line 1, scss/style.scss */
 body {
   background-image: url("img/OG4.jpg");
   background-size: 100vw 100vh;
@@ -6,7 +7,7 @@ body {
 }
 /* line 8, scss/style.scss */
 body #wrapper {
-  width: 80%;
+  width: 90%;
   height: auto;
   margin-top: 70px;
   margin-left: auto;
@@ -49,7 +50,7 @@ body #wrapper #categories a {
 /* line 49, scss/style.scss */
 body #wrapper #header {
   width: 100%;
-  height: 55px;
+  height: 65px;
   top: 0;
   background-color: white;
   position: fixed;
@@ -58,8 +59,8 @@ body #wrapper #header {
 }
 /* line 58, scss/style.scss */
 body #wrapper #header #Header-logo {
-  width: 40px;
-  height: 50px;
+  width: 55px;
+  height: 65px;
   display: block;
   position: absolute;
   margin-left: 48.5%;
@@ -71,8 +72,8 @@ body #wrapper #header #shoppingcart-img {
   right: 0;
   display: inline;
   position: absolute;
-  margin-top: 2.5px;
-  margin-right: 5px;
+  margin-top: 7px;
+  margin-right: 7px;
 }
 /* line 75, scss/style.scss */
 body #wrapper #item-holder {
@@ -82,34 +83,39 @@ body #wrapper #item-holder {
   overflow-y: scroll;
   right: 0;
   top: 0;
-  margin-top: 55px;
+  margin-top: 65px;
   position: absolute;
   z-index: 50;
   display: none;
   position: fixed;
 }
 /* line 87, scss/style.scss */
+body #wrapper #item-holder a {
+  text-decoration: none;
+  color: red;
+}
+/* line 91, scss/style.scss */
 body #wrapper #item-holder .added-item {
   margin: 3px;
   border: 1px solid #C2C2C2;
   height: 100px;
   box-shadow: 3px 3px 3px #C2C2C2;
 }
-/* line 92, scss/style.scss */
+/* line 96, scss/style.scss */
 body #wrapper #item-holder .added-item .item-info {
   float: left;
 }
-/* line 96, scss/style.scss */
+/* line 100, scss/style.scss */
 body #wrapper #item-holder .added-item .item-info ul li {
   list-style-type: none;
   font-family: helvetica;
 }
-/* line 102, scss/style.scss */
+/* line 106, scss/style.scss */
 body #wrapper #item-holder .added-item .remove-button {
   width: 188px;
   margin-left: 88px;
 }
-/* line 105, scss/style.scss */
+/* line 109, scss/style.scss */
 body #wrapper #item-holder .added-item .remove-button button {
   margin-top: 25px;
   float: right;
@@ -122,7 +128,7 @@ body #wrapper #item-holder .added-item .remove-button button {
   outline: none;
   border-bottom: 5px solid #D40000;
 }
-/* line 117, scss/style.scss */
+/* line 121, scss/style.scss */
 body #wrapper #item-holder .added-item .remove-button button:active {
   margin-top: 25px;
   float: right;
@@ -134,11 +140,6 @@ body #wrapper #item-holder .added-item .remove-button button:active {
   text-decoration: none;
   outline: none;
   border-top: 5px solid #D40000;
-}
-/* line 129, scss/style.scss */
-body #wrapper #item-holder .added-item .remove-button a {
-  text-decoration: none;
-  color: red;
 }
 /* line 137, scss/style.scss */
 body #wrapper #overlay {
@@ -155,10 +156,10 @@ body #wrapper #overlay {
 }
 /* line 151, scss/style.scss */
 body #wrapper #product-wrapper {
-  width: 400px;
-  height: 500px;
+  width: 525px;
+  height: 625px;
   display: inline-block;
-  margin-left: 80px;
+  margin-left: 70px;
   margin-bottom: 10px;
   background-color: white;
   box-shadow: 3px 3px 3px #C2C2C2;
@@ -187,8 +188,6 @@ body #wrapper #product-wrapper #index-price {
 /* line 178, scss/style.scss */
 body #wrapper #product-wrapper img {
   margin-top: 32px;
-  height: 360px;
-  width: 286px;
   margin-left: 38px;
 }
 /* line 186, scss/style.scss */
@@ -352,27 +351,47 @@ body #wrapper #checkout-list .checkout-table .table-body #table-button button:ac
   border-top: 4px solid #D40000;
   border-right: 2px solid #D40000;
 }
-/* line 343, scss/style.scss */
-body #wrapper #receipt_option #receipt-header {
+/* line 342, scss/style.scss */
+body #wrapper #receipt-option-outer {
+  display: table;
+  position: absolute;
+  height: 90%;
+  width: 90%;
+}
+/* line 347, scss/style.scss */
+body #wrapper #receipt-option-outer #receipt-option-middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+/* line 350, scss/style.scss */
+body #wrapper #receipt-option-outer #receipt-option-middle #receipt-option-inner {
+  background-color: rgba(255, 255, 255, 0.7);
+  min-height: 350px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* line 355, scss/style.scss */
+body #wrapper #receipt-option-outer #receipt-option-middle #receipt-option-inner #receipt-header {
   text-align: center;
   font-family: helvetica;
   font-size: 50px;
+  margin-top: 5px;
 }
-/* line 348, scss/style.scss */
-body #wrapper #receipt_option #receipt-text {
+/* line 361, scss/style.scss */
+body #wrapper #receipt-option-outer #receipt-option-middle #receipt-option-inner #receipt-text {
   text-align: center;
   font-family: helvetica;
   font-size: 30px;
 }
-/* line 354, scss/style.scss */
-body #wrapper #receipt_option #btn-option {
+/* line 367, scss/style.scss */
+body #wrapper #receipt-option-outer #receipt-option-middle #receipt-option-inner #btn-option {
   margin-right: auto;
   margin-left: auto;
   height: 110px;
   width: 45%;
 }
-/* line 359, scss/style.scss */
-body #wrapper #receipt_option #btn-option button {
+/* line 372, scss/style.scss */
+body #wrapper #receipt-option-outer #receipt-option-middle #receipt-option-inner #btn-option button {
   margin-top: 25px;
   margin-left: 20px;
   height: 100px;
@@ -388,8 +407,8 @@ body #wrapper #receipt_option #btn-option button {
   border-bottom: 5px solid #D40000;
   border-left: 3px solid #D40000;
 }
-/* line 376, scss/style.scss */
-body #wrapper #receipt_option #btn-option button:active {
+/* line 388, scss/style.scss */
+body #wrapper #receipt-option-outer #receipt-option-middle #receipt-option-inner #btn-option button:active {
   margin-top: 25px;
   height: 100px;
   width: 200px;
@@ -404,340 +423,27 @@ body #wrapper #receipt_option #btn-option button:active {
   border-top: 5px solid #D40000;
   border-right: 3px solid #D40000;
 }
-/* line 396, scss/style.scss */
+/* line 407, scss/style.scss */
+body #wrapper #loding-outer {
+  display: table;
+  position: absolute;
+  height: 100%;
+  width: 90%;
+}
+/* line 412, scss/style.scss */
+body #wrapper #loding-outer #loding-middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+/* line 415, scss/style.scss */
+body #wrapper #loding-outer #loding-middle #loding-inner {
+  min-height: 350px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* line 425, scss/style.scss */
 body #page-not-found img {
   width: 100px;
   height: auto;
   width: 100%;
 }
-  body #wrapper {
-    width: 90%;
-    height: auto;
-    margin-top: 70px;
-    margin-left: auto;
-    margin-right: auto; }
-    body #wrapper #categories {
-      height: 60px;
-      width: 100%;
-      margin-top: 20px;
-      margin-bottom: 20px; }
-      body #wrapper #categories li {
-        width: 112px;
-        border-radius: 5px;
-        box-shadow: 3px 3px 2px #333333;
-        height: 40px;
-        list-style-type: none;
-        float: left;
-        margin-left: 7px;
-        display: inline-block;
-        background-color: #333333; }
-      body #wrapper #categories a {
-        width: 115px;
-        text-align: center;
-        margin-top: 12px;
-        text-shadow: 2px 2px #000000;
-        display: block;
-        text-decoration: none;
-        color: white;
-        font-size: 11pt;
-        text-transform: uppercase;
-        font-weight: bold;
-        font-family: helvetica; }
-    body #wrapper #header {
-      width: 100%;
-      height: 65px;
-      top: 0;
-      background-color: white;
-      position: fixed;
-      left: 0;
-      z-index: 75; }
-      body #wrapper #header #Header-logo {
-        width: 55px;
-        height: 65px;
-        display: block;
-        position: absolute;
-        margin-left: 48.5%; }
-      body #wrapper #header #shoppingcart-img {
-        width: 50px;
-        height: 50px;
-        right: 0;
-        display: inline;
-        position: absolute;
-        margin-top: 7px;
-        margin-right: 7px; }
-    body #wrapper #item-holder {
-      background-color: white;
-      width: 300px;
-      max-height: 80vh;
-      overflow-y: scroll;
-      right: 0;
-      top: 0;
-      margin-top: 65px;
-      position: absolute;
-      z-index: 50;
-      display: none;
-      position: fixed; }
-      body #wrapper #item-holder .added-item {
-        margin: 3px;
-        border: 1px solid #C2C2C2;
-        height: 100px;
-        box-shadow: 3px 3px 3px #C2C2C2; }
-        body #wrapper #item-holder .added-item .item-info {
-          float: left; }
-          body #wrapper #item-holder .added-item .item-info ul li {
-            list-style-type: none;
-            font-family: helvetica; }
-        body #wrapper #item-holder .added-item .remove-button {
-          width: 188px;
-          margin-left: 88px; }
-          body #wrapper #item-holder .added-item .remove-button button {
-            margin-top: 25px;
-            float: right;
-            height: 45px;
-            background-color: #FF0000;
-            color: white;
-            border-radius: 5px;
-            border: none;
-            text-decoration: none;
-            outline: none;
-            border-bottom: 5px solid #D40000; }
-          body #wrapper #item-holder .added-item .remove-button button:active {
-            margin-top: 25px;
-            float: right;
-            height: 45px;
-            background-color: #FF0000;
-            color: white;
-            border-radius: 5px;
-            border: none;
-            text-decoration: none;
-            outline: none;
-            border-top: 5px solid #D40000; }
-    body #wrapper #overlay {
-      display: none;
-      background-color: rgba(0, 0, 0, 0.8);
-      left: 50%;
-      top: 50%;
-      position: fixed;
-      z-index: 25;
-      height: 1400px;
-      margin-top: -700px;
-      width: 2400px;
-      margin-left: -1200px; }
-    body #wrapper .product-wrapper {
-      width: 525px;
-      height: 625px;
-      display: inline-block;
-      margin-left: 70px;
-      margin-bottom: 10px;
-      background-color: white;
-      box-shadow: 3px 3px 3px #C2C2C2;
-      border: 1px solid #C2C2C2; }
-      body #wrapper .product-wrapper #index-title {
-        margin-left: 10px;
-        margin-left: 10px;
-        margin-bottom: 0px;
-        font-family: helvetica;
-        text-decoration: none;
-        color: black;
-        font-size: 25px; }
-      body #wrapper .product-wrapper #index-price {
-        margin-left: 10px;
-        margin-right: 10px;
-        margin-top: 1px;
-        font-family: helvetica;
-        text-decoration: none;
-        color: black;
-        border-bottom: 1px solid black; }
-      body #wrapper .product-wrapper img {
-        margin-top: 32px;
-        margin-left: 38px; }
-    body #wrapper #single-box {
-      border: solid 1px black;
-      position: fixed;
-      left: 50%;
-      top: 50%;
-      background-color: white;
-      z-index: 100;
-      height: 500px;
-      margin-top: -220px;
-      width: 800px;
-      margin-left: -400px; }
-      body #wrapper #single-box .product_image {
-        float: left;
-        position: relative; }
-      body #wrapper #single-box .product_info {
-        float: left;
-        position: relative;
-        width: 300px;
-        margin-left: 100px; }
-        body #wrapper #single-box .product_info .purchase_success {
-          height: 40px;
-          width: 40px; }
-          body #wrapper #single-box .product_info .purchase_success .fa-check {
-            display: none;
-            color: green; }
-        body #wrapper #single-box .product_info #btn-submit {
-          -moz-box-shadow: inset 0px -3px 7px 0px #29bbff;
-          -webkit-box-shadow: inset 0px -3px 7px 0px #29bbff;
-          box-shadow: inset 0px -3px 7px 0px #29bbff;
-          background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #9bd4f5), color-stop(1, #0688fa));
-          background: -moz-linear-gradient(top, #9bd4f5 5%, #0688fa 100%);
-          background: -webkit-linear-gradient(top, #9bd4f5 5%, #0688fa 100%);
-          background: -o-linear-gradient(top, #9bd4f5 5%, #0688fa 100%);
-          background: -ms-linear-gradient(top, #9bd4f5 5%, #0688fa 100%);
-          background: linear-gradient(to bottom, #9bd4f5 5%, #0688fa 100%);
-          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9bd4f5', endColorstr='#0688fa',GradientType=0);
-          background-color: #9bd4f5;
-          -moz-border-radius: 13px;
-          -webkit-border-radius: 13px;
-          border-radius: 13px;
-          border: 1px solid #0b0e07;
-          display: inline-block;
-          cursor: pointer;
-          color: #ffffff;
-          font-family: Arial;
-          font-size: 15px;
-          margin-top: 10px;
-          padding: 9px 23px;
-          text-decoration: none;
-          text-shadow: 0px 1px 0px #263666; }
-    body #wrapper #inner {
-      width: 100%;
-      height: 400px;
-      overflow: hidden;
-      position: absolute;
-      top: 50%;
-      left: 0;
-      margin: -100px 0 0 0; }
-    body #wrapper #carousel img {
-      height: auto;
-      border: none;
-      display: block;
-      float: left;
-      padding: 0 10px; }
-    body #wrapper .loading {
-      height: 200px;
-      width: 200px;
-      background-image: url("img/loading1.gif");
-      background-repeat: none;
-      margin: 0 auto; }
-    body #wrapper .loading_text {
-      width: 200px;
-      height: 40px;
-      margin: 0 auto;
-      text-align: center; }
-    body #wrapper #checkout-list {
-      background-color: rgba(255, 255, 255, 0.7);
-      min-height: 400px; }
-      body #wrapper #checkout-list .checkout-table {
-        margin: 10px;
-        width: 98%;
-        text-align: left;
-        border-collapse: collapse; }
-        body #wrapper #checkout-list .checkout-table .table-head th {
-          padding-bottom: 30px;
-          font-family: helvetica;
-          font-size: 30px; }
-        body #wrapper #checkout-list .checkout-table .table-body {
-          border-bottom: 1px solid black;
-          margin-bottom: 20px; }
-          body #wrapper #checkout-list .checkout-table .table-body td {
-            font-family: helvetica;
-            font-size: 20px;
-            padding-top: 20px; }
-          body #wrapper #checkout-list .checkout-table .table-body #table-button button {
-            margin-top: 25px;
-            height: 45px;
-            float: right;
-            background-color: #FF0000;
-            color: white;
-            border-radius: 5px;
-            border: none;
-            text-decoration: none;
-            outline: none;
-            border-bottom: 5px solid #D40000;
-            border-left: 2px solid #D40000; }
-          body #wrapper #checkout-list .checkout-table .table-body #table-button button:active {
-            margin-top: 25px;
-            height: 45px;
-            float: right;
-            background-color: #FF0000;
-            color: white;
-            border-radius: 5px;
-            border: none;
-            text-decoration: none;
-            outline: none;
-            border-top: 4px solid #D40000;
-            border-right: 2px solid #D40000; }
-    body #wrapper #receipt-option-outer {
-      display: table;
-      position: absolute;
-      height: 90%;
-      width: 90%; }
-      body #wrapper #receipt-option-outer #receipt-option-middle {
-        display: table-cell;
-        vertical-align: middle; }
-        body #wrapper #receipt-option-outer #receipt-option-middle #receipt-option-inner {
-          background-color: rgba(255, 255, 255, 0.7);
-          min-height: 350px;
-          margin-left: auto;
-          margin-right: auto; }
-          body #wrapper #receipt-option-outer #receipt-option-middle #receipt-option-inner #receipt-header {
-            text-align: center;
-            font-family: helvetica;
-            font-size: 50px;
-            margin-top: 5px; }
-          body #wrapper #receipt-option-outer #receipt-option-middle #receipt-option-inner #receipt-text {
-            text-align: center;
-            font-family: helvetica;
-            font-size: 30px; }
-          body #wrapper #receipt-option-outer #receipt-option-middle #receipt-option-inner #btn-option {
-            margin-right: auto;
-            margin-left: auto;
-            height: 110px;
-            width: 45%; }
-            body #wrapper #receipt-option-outer #receipt-option-middle #receipt-option-inner #btn-option button {
-              margin-top: 25px;
-              margin-left: 20px;
-              height: 100px;
-              width: 200px;
-              background-color: #FF0000;
-              color: white;
-              font-size: 25px;
-              font-family: helvetica;
-              border-radius: 5px;
-              border: none;
-              text-decoration: none;
-              outline: none;
-              border-bottom: 5px solid #D40000;
-              border-left: 3px solid #D40000; }
-            body #wrapper #receipt-option-outer #receipt-option-middle #receipt-option-inner #btn-option button:active {
-              margin-top: 25px;
-              height: 100px;
-              width: 200px;
-              background-color: #FF0000;
-              color: white;
-              font-size: 25px;
-              font-family: helvetica;
-              border-radius: 5px;
-              border: none;
-              text-decoration: none;
-              outline: none;
-              border-top: 5px solid #D40000;
-              border-right: 3px solid #D40000; }
-    body #wrapper #loding-outer {
-      display: table;
-      position: absolute;
-      height: 100%;
-      width: 90%; }
-      body #wrapper #loding-outer #loding-middle {
-        display: table-cell;
-        vertical-align: middle; }
-        body #wrapper #loding-outer #loding-middle #loding-inner {
-          min-height: 350px;
-          margin-left: auto;
-          margin-right: auto; }
-  body #page-not-found img {
-    width: 100px;
-    height: auto;
-    width: 100%; }
